chapitres/17/mailpit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
spec:
  ingressClassName: nginx
  rules:
  - host: "mailpit.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 8025
  tls:
    - secretName: eni-yannig-ovh-prod-tls
      hosts:
        - "mailpit.eni.yannig.ovh"
